==> geo-tp/ESP32-Bus-Pirate/lib/PN532/Adafruit_PN532.cpp <==
#include "Adafruit_PN532.h"
#define PN532DEBUGPRINT Serial ///< Fixed name for debug Serial instance
#define PN532_PACKBUFFSIZ 240               ///< Packet buffer size in bytes

bool Adafruit_PN532::begin() {
  if (spi_dev) {
    // SPI initialization
    if (!spi_dev->begin()) {
      return false;
    }
  } else if (i2c_dev) {
    // I2C initialization
    // PN532 will fail address check since its asleep, so suppress
    if (!i2c_dev->begin(false)) {
      return false;
    }
  } else if (ser_dev) {
    ser_dev->begin(115200);
    // clear out anything in read buffer
    while (ser_dev->available())
      ser_dev->read();
  } else {
    // no interface specified
    return false;
  }
  reset(); // HW reset - put in known state
  delay(10);
  wakeup(); // hey! wakeup!
  return true;
}

bool Adafruit_PN532::isready() {
  if (spi_dev) {
    // SPI ready check via Status Request
    uint8_t cmd = PN532_SPI_STATREAD;
    uint8_t reply;
    spi_dev->write_then_read(&cmd, 1, &reply, 1);
    return reply == PN532_SPI_READY;
  } else if (i2c_dev) {
    // I2C ready check via reading RDY byte
    uint8_t rdy[1];
    i2c_dev->read(rdy, 1);
    return rdy[0] == PN532_I2C_READY;
  } else if (ser_dev) {
    // Serial ready check based on non-zero read buffer
    return (ser_dev->available() != 0);
  } else if (_irq != -1) {
    uint8_t x = digitalRead(_irq);
    return x == 0;
  }
  return false;
}

void Adafruit_PN532::readdata(uint8_t *buff, uint8_t n) {
  if (spi_dev) {
    // SPI read
    uint8_t cmd = PN532_SPI_DATAREAD;
    spi_dev->write_then_read(&cmd, 1, buff, n);
  } else if (i2c_dev) {
    // I2C read
    uint8_t rbuff[n + 1]; // +1 for leading RDY byte
    i2c_dev->read(rbuff, n + 1);
    for (uint8_t i = 0; i < n; i++) {
      buff[i] = rbuff[i + 1];
    }
  } else if (ser_dev) {
    // Serial read
    ser_dev->readBytes(buff, n);
  }
#ifdef PN532DEBUG
  PN532DEBUGPRINT.print(F("Reading: "));
  for (uint8_t i = 0; i < n; i++) {
    PN532DEBUGPRINT.print(F(" 0x"));
    PN532DEBUGPRINT.print(buff[i], HEX);
  }
  PN532DEBUGPRINT.println();
#endif
}

void Adafruit_PN532::writecommand(uint8_t *cmd, uint8_t cmdlen) {
  if (spi_dev) {
    // SPI command write.
    uint8_t checksum;
    uint8_t packet[9 + cmdlen];
    uint8_t *p = packet;
    cmdlen++;

    p[0] = PN532_SPI_DATAWRITE;
    p++;

    p[0] = PN532_PREAMBLE;
    p++;
    p[0] = PN532_STARTCODE1;
    p++;
    p[0] = PN532_STARTCODE2;
    p++;
    checksum = PN532_PREAMBLE + PN532_STARTCODE1 + PN532_STARTCODE2;

    p[0] = cmdlen;
    p++;
    p[0] = ~cmdlen + 1;
    p++;

    p[0] = PN532_HOSTTOPN532;
    p++;
    checksum += PN532_HOSTTOPN532;

    for (uint8_t i = 0; i < cmdlen - 1; i++) {
      p[0] = cmd[i];
      p++;
      checksum += cmd[i];
    }

    p[0] = ~checksum;
    p++;
    p[0] = PN532_POSTAMBLE;
    p++;

#ifdef PN532DEBUG
    Serial.print("Sending : ");
    for (int i = 1; i < 8 + cmdlen; i++) {
      Serial.print("0x");
      Serial.print(packet[i], HEX);
      Serial.print(", ");
    }
    Serial.println();
#endif

    spi_dev->write(packet, 8 + cmdlen);
  } else if (i2c_dev || ser_dev) {
    // I2C or Serial command write.
    uint8_t packet[8 + cmdlen];
    uint8_t LEN = cmdlen + 1;

    packet[0] = PN532_PREAMBLE;
    packet[1] = PN532_STARTCODE1;
    packet[2] = PN532_STARTCODE2;
    packet[3] = LEN;
    packet[4] = ~LEN + 1;
    packet[5] = PN532_HOSTTOPN532;
    uint8_t sum = 0;
    for (uint8_t i = 0; i < cmdlen; i++) {
      packet[6 + i] = cmd[i];
      sum += cmd[i];
    }
    packet[6 + cmdlen] = ~(PN532_HOSTTOPN532 + sum) + 1;
    packet[7 + cmdlen] = PN532_POSTAMBLE;

#ifdef PN532DEBUG
    Serial.print("Sending : ");
    for (int i = 1; i < 8 + cmdlen; i++) {
      Serial.print("0x");
      Serial.print(packet[i], HEX);
      Serial.print(", ");
    }
    Serial.println();
#endif

    if (i2c_dev) {
      i2c_dev->write(packet, 8 + cmdlen);
    } else {
      ser_dev->write(packet, 8 + cmdlen);
    }
  }
}
